--- a/src/components/SpotCards/spotcards.module.css
+++ b/src/components/SpotCards/spotcards.module.css
@@ -179,6 +179,10 @@
         margin: 0 0 5.2vw 15.9vw;
 
     }
+
+    .spotTitle {
+        text-align: center;
+    }
 }
 
 @media screen and (max-width:640px) {
@@ -257,5 +261,9 @@
         font-weight: 500;
         font-size: 14px;
         line-height: 20px;
+    }
+
+    .spotTitle {
+        text-align: center;
     }
 }
